--- a/README
+++ b/README
@@ -1,20 +1,11 @@
 Игра в шашки.
 
-Язык: C++11.
-Использованные библиотеки: Qt5.
+Состав проекта:
 
-Функции:
-1) игра с компьютером (алгоритм альфа-бета отсечения);
-2) игра двух людей на одном компьютере.
+1. Статически подсоединяемая библиотека на C++, которая
+вычисляет действия над шашечной доской (BoardState).
+Эта же библиотека содержит реализацию алгоритма для
+автоматического выбора хода (файл board/minimax.cpp).
 
-Игра ведётся под запись; таймер отсутствует.
-
-Важнейшие классы:
-1) BoardState, Position, Cell, Direction, Role, Segment: состояние
-игры и правила совершения ходов.
-2) MainWindow, BoardWidget, HistoryWidget: пользовательский интерфейс.
-3) GuiPlayer, ActionBuilder, ActionTree: восстановление полухода из
-данной позиции по обрывочным командам пользователя.
-4) AiPlayer: автоматическое вычисление хода (альфа-бета отсечение).
-5) Game: место исполнения команд пользователя по ведению игры.
-
+2. Пользовательские интерфейсы, которые используют эту
+библиотеку для совершения игры в шашки (cliplay, guiplay).
